# Aquisicao_e_Processamento_de_Imagens

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: project_pkg.pc
devel/lib/project_pkg/: project_pkg
devel/share/project_pkg/cmake/: project_pkgConfig.cmake
src/: CMakeLists.txt.user.e050955  GlWidget.cpp  GlWidget.h
src/project_pkg/: CMakeLists.txt  Tutorial.txt  mainpage.dox
src/project_pkg/include/project_pkg/: Astra.h  GlWidget.h  Imu.h  Kinect.h  Kinect_.h  Laser.h  Zed.h  mainwindow.h  sync.h  sync2.h
src/project_pkg/src/: Astra.cpp  GlWidget.cpp  Imu.cpp  Kinect_.cpp  Laser.cpp  Zed.cpp  jetsonGPIO.cpp  main.cpp  mainwindow.cpp  sync.cpp  sync2.cpp
src/project_pkg/ui/: mainwindow.ui
